fix paragraph align justify

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -60,6 +60,7 @@ small, .small {
 
 p {
   margin-bottom: 0.5em;
+  text-align: justify;
 }
 
 u,
