--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -68,7 +68,6 @@
 
   p, li, dl {
     font-size: 1em;
-    text-align: justify;
   }
 
   /* paragraph indents */
